# Markloto

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements-mobile.txt  requirements.txt  run_gui.py  run_mobile.py
.github/: RELEASING.md
.github/workflows/: ci.yml  release.yml
app/: __init__.py  about_tab.py  bet_calculator.py  game_tab.py  main_window.py  metadata.py  theme.py  ui_helpers.py  ultimos_sorteos_tab.py  user_bet_panel.py  validation_panel.py  widgets.py
assets/data/seed/: seed_info.json
assets/loteria_hist/: schema.sql
data/seed/: README.txt  seed_info.json
docs/: Euromillones_completo_sorteos.xlsx
loteria_hist/: __init__.py  analysis_cache.py  analytics.py  apuestas.py  bootstrap_db.py  csv_euromillones.py  csv_import_649.py  db.py  export_xlsx.py  metadata.py  parse_selae.py  paths.py  periodos.py  repository.py  schema.sql  sync_coordinator.py  sync_selae.py  ultimos_data.py  validacion.py
mobile/: __init__.py  app.py  config.py  game_features.py  widgets.py
packaging/: README.txt
packaging/debian/: LEEME-instalacion.txt  control.template  copyright  markloto.desktop  markloto.launcher.sh  postinst  prerm
packaging/inno-setup/: LEEME-instalacion.txt  markloto.iss
packaging/pyinstaller/: loterias.spec
scripts/: build_android_apk.sh  build_linux_deb.sh  build_seed_db.py  build_windows.ps1  fix_shell_scripts.sh  poblar_base.py  prepare_android_assets.sh
